--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,24 +22,21 @@ ext {
     toroVersion = '2.2.0'
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
-
     // card view
     compile 'com.android.support:cardview-v7:25.2.0'
-
     // exoplayer
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
-
     // fresco
     compile 'com.facebook.fresco:fresco:1.2.0'
-
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
